--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>PIMENTA-BIQUINHO</h1>
+    <header class="cabeçalho">
+        <h1>PIMENTA-BIQUINHO</h1>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.plantei.com.br%2Fmudas%2Fpimentas%2Fmuda-de-pimenta-biquinho-pote-14&psig=AOvVaw2P7puA3NJsfVLvPujyAZhg&ust=1682606047897000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOjMtpPix_4CFQAAAAAdAAAAABAD" alt="">   
+    </header>
+    
     
 </body>
 </html>
