--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="cabeçalho">
         <h1>PIMENTA-BIQUINHO</h1>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.plantei.com.br%2Fmudas%2Fpimentas%2Fmuda-de-pimenta-biquinho-pote-14&psig=AOvVaw2P7puA3NJsfVLvPujyAZhg&ust=1682606047897000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOjMtpPix_4CFQAAAAAdAAAAABAD" alt="">   
+        <img src="https://static3.tcdn.com.br/img/img_prod/350075/muda_de_pimenta_biquinho_pote_15_16811_2_76b4c53c2f2c67e1565f28baa2d57ff1.jpeg" alt="">   
     </header>
     
     
