--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <center>
     <header class="cabeçalho">
         <h1>PIMENTA-BIQUINHO</h1>
-        <img class="imagempimenta1" src="https://static3.tcdn.com.br/img/img_prod/350075/muda_de_pimenta_biquinho_pote_15_16811_2_76b4c53c2f2c67e1565f28baa2d57ff1.jpeg" alt="">   
+        <img class="imagempimenta1" src="https://a-static.mlcdn.com.br/800x560/muda-de-pimenta-biquinho/miamorgarden/c94ee70e513011ecb1cc4201ac18503a/c4f65d80241550636d89a17023a629c3.jpeg" alt="">   
     </header>
    </center>
    <section>
