--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         <img class="imagempimenta1" src="https://a-static.mlcdn.com.br/800x560/muda-de-pimenta-biquinho/miamorgarden/c94ee70e513011ecb1cc4201ac18503a/c4f65d80241550636d89a17023a629c3.jpeg" alt="">   
     </header>
    </center>
-   <section>
-    <p></p>
+   <section class="apresentacao_trabalho">
+    <section>
+        <b class="titulo_apresentacao_trabalho">
+            Sobre o trabalho:
+        </b>
+    </section>
+
    </section>
     
 </body>
