--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <b class="titulo_apresentacao_trabalho">
             Sobre o trabalho:
         </b>
+        <p>olá, este trabalho é feito com intuito de observar o crecimento por meio de estaquia</p>
     </section>
 
    </section>
