--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             Sobre o trabalho:
         </b>
         <p>olá, este trabalho é feito com intuito de observar o crecimento por meio de estaquia</p>
+        <P>meu grupo criou esse site com o objetivo de passar informaçoẽs sobre a planta biquinho</P>
     </section>
+
 
    </section>
     
