--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="cabeçalho">
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
-        <img class="imagempimenta1" src="https://a-static.mlcdn.com.br/800x560/muda-de-pimenta-biquinho/miamorgarden/c94ee70e513011ecb1cc4201ac18503a/c4f65d80241550636d89a17023a629c3.jpeg" alt="">   
+        <img class="imagempimenta1" src="20230524_085149.jpg" alt="">   
     </header>
     <section class="apresentacao_trabalho">
     <section>
