--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="cabeçalho">
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
-        <img class="imagempimenta1" src="IMG-20230524-WA0002.jpg" alt="gustavo">   
+        <img class="imagempimenta1" src="20230524_085149.jpg" alt="gustavo">   
     </header>
     <section class="apresentacao_trabalho">
     <section>
