--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
    </section>
    <section class="APRESENTACAOINTRUCAO">
     <section>
+        <CENter>
         <b class="INTRODUCAO">
             INTRODUÇÃO
         </b>
+    </CENter>
         <p>O que é biotecnologia? Quando ela surgiu? A biotecnologia começou 6.000 aC. Com o processo de fermentação de bebidas alcoólicas. Posteriormente, a fermentação também começou a fazer pão, queijo, vinagre e iogurte.
             No século XVII, o pesquisador Anton Van Leeuwenhoek descobriu uma pequena criatura através de um microscópio, mas não foi até 1876 que Louis Pasteur provou que esses microrganismos foram fermentados.
             Embora essa ciência exista há milhares de anos, o termo "biotecnologia" foi fundado pelo engenheiro húngaro Karl Ereky em 1919. Foi durante a Segunda Guerra Mundial que a pesquisa de explosivos e munições aumentou bastante usando produtos de biotecnologia. Há outro progresso nesta parte, como Alexander Fleming em 1928 descobriu penicilina.</P>
