--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 </CENter>
 <B class="SEMANAS">SEMANA 1</B>
     <p>Na semana 01 do dia 15 de maio,foi constatado que havia pulgões nas pimentas-biquinho por isso foi feito o controle da praga utilizando uma substância orgânica formada por água,vinagre e detergente que sufoca os pulgões,assim controlando a praga.Aprendemos a respeito da propagação vegetativa e como escolhemos a estaquia por não necessitar de muito espaço e pela facilidade de realizar esse processo,além de medir e obter informações sobre as estacas (caule) do bambu para averiguar seu crescimento em um enraizador artificial.</p>
+   
+    <B class="SEMANAS">SEMANA 2</B>
+    <p></P>
 </section>
 
 
