--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
 
 
-   </section>
+   <section class="semanacor">
    <CENter>
     <b class="INTRODUCAO">
         RELATÓRIO SEMANAL
@@ -55,7 +55,6 @@
    
     <B class="SEMANAS">SEMANA 2</B>
     <p></P>
-</section>
 
 
 </section>
