--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<a href="segundapagina.html">teste</a>
+
     <header class="cabeçalho">
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
         <img class="imagempimenta1" src="20230524_085149.jpg" alt="gustavo">   
     </header>
     <section class="apresentacao_trabalho">
-    <section>
+    <sectiodevice-widthn>
         <b class="titulo_apresentacao_trabalho">
             Sobre o trabalho:
         </b>
@@ -21,7 +23,7 @@
         <P>Meu grupo criou esse site com o objetivo de passar informaçoẽs sobre a planta biquinho</P>
     </section>
 
-
+    device-width
    </section>
    <section class="APRESENTACAOINTRUCAO">
     <section>
