--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 <a href="segundapagina.html">teste</a>
-
+<section class="cabeçalhogeral">
     <header class="cabeçalho">
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
         <img class="imagempimenta1" src="20230524_085149.jpg" alt="gustavo">   
     </header>
+    </section>
     <section class="apresentacao_trabalho">
     <sectiodevice-widthn>
         <b class="titulo_apresentacao_trabalho">
