--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<a href="segundapagina.html">teste</a>
+    <ul>
+        <li class="CABECALHOLISTA">
+<a href="semana1.html">SEMANA 1</a>
+        </li>
+</ul>
 <section class="cabeçalhogeral">
     <header class="cabeçalho">
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
