--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li class="CABECALHOLISTA">
     <a href="semana1.html">SEMANA 1</a>
             </li>
+            <li class="CABECALHOLISTA">
+                <a href="semana2.html">SEMANA 2</a>
+                        </li>
     </ul>
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
         <img class="imagempimenta1" src="20230524_085149.jpg" alt="gustavo">   
