--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li class="CABECALHOLISTA">
                 <a href="semana2.html">SEMANA 2</a>
                         </li>
+                        <li class="CABECALHOLISTA">
+                            <a href="semana3.html">SEMANA 3</a>
+                                    </li>
                    
     </ul>
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
