--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <p>Na semana 01 do dia 15 de maio,foi constatado que havia pulgões nas pimentas-biquinho por isso foi feito o controle da praga utilizando uma substância orgânica formada por água,vinagre e detergente que sufoca os pulgões,assim controlando a praga.Aprendemos a respeito da propagação vegetativa e como escolhemos a estaquia por não necessitar de muito espaço e pela facilidade de realizar esse processo,além de medir e obter informações sobre as estacas (caule) do bambu para averiguar seu crescimento em um enraizador artificial.</p> </B>
    <center>
     <img class="imagempimenta1" src="20230524_085149.jpg" alt="">
+    <img class="imagempimenta1" src="imagem2.jpeg" alt="">
    </center>
     <B class="SEMANAS">SEMANA 2
     <p> Na semana 02 trocamos o solo dda planta e lavamos a raiz, e realizamos o processo de estaquia na pimenta biquinho com um enraizador artificial que nós fizemos. Plantamos suculenta e aprendemos sobre propagação vegetativa tambem.</P>
