--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
    <center>
     <img class="imagempimenta1" src="20230524_085149.jpg" alt="">
     <img class="imagempimenta1" src="imagem2.jpeg" alt="">
+    <img class="imagempimenta1" src="imagem3.jpeg" alt="">
    </center>
     <B class="SEMANAS">SEMANA 2
     <p> Na semana 02 trocamos o solo dda planta e lavamos a raiz, e realizamos o processo de estaquia na pimenta biquinho com um enraizador artificial que nós fizemos. Plantamos suculenta e aprendemos sobre propagação vegetativa tambem.</P>
