--- a/index.html
+++ b/index.html
@@ -66,15 +66,23 @@
     </b>
 </CENter>
 <B class="SEMANAS">SEMANA 1
-    <p>Na semana 01 do dia 15 de maio,foi constatado que havia pulgões nas pimentas-biquinho por isso foi feito o controle da praga utilizando uma substância orgânica formada por água,vinagre e detergente que sufoca os pulgões,assim controlando a praga.Aprendemos a respeito da propagação vegetativa e como escolhemos a estaquia por não necessitar de muito espaço e pela facilidade de realizar esse processo,além de medir e obter informações sobre as estacas (caule) do bambu para averiguar seu crescimento em um enraizador artificial.</p> </B>
+    <p> Na primeira semana do dia quinze de maio, foi constatado que havia pulgões nas pimentas-biquinho por isso foi feito o controle da praga utilizando uma substância orgânica formada por água,vinagre e detergente que sufoca os pulgões,assim controlando a praga.Aprendemos a respeito da propagação vegetativa e como escolhemos a estaquia por não necessitar de muito espaço e pela facilidade de realizar esse processo,além de medir e obter informações sobre as estacas (caule) do bambu para averiguar seu crescimento em um enraizador artificial.
+    </p> </B>
    <center>
     <img class="imagempimenta1" src="20230524_085149.jpg" alt="">
     <img class="imagempimenta1" src="imagem2.jpeg" alt="">
     <img class="imagempimenta1" src="imagem3.jpeg" alt="">
    </center>
     <B class="SEMANAS">SEMANA 2
-    <p> Na semana 02 trocamos o solo dda planta e lavamos a raiz, e realizamos o processo de estaquia na pimenta biquinho com um enraizador artificial que nós fizemos. Plantamos suculenta e aprendemos sobre propagação vegetativa tambem.</P>
+    <p>   Na segunda semana dia vinte dois trocamos o solo da planta e lavamos a raiz, e realizamos o processo de estaquia na pimenta biquinho com um enraizador artificial que nós fizemos. Plantamos suculentas e aprendemos sobre propagação vegetativa também.
+    </P>
     </B>
+
+    <B class="SEMANAS">SEMANA 3
+        <p>  Na terceira semana, fizemos a retirada dos pulgões novamente usando a mistura orgânica, após isso tínhamos algumas pimentas abrimos elas retiramos as sementes e plantamos em um novo recipiente depois disso mudamos a nossa pimenta biquinho e o bambu de local, aonde eles teriam mais contato ao sol.
+            E depois pegamos uma flor chamada hibisco e retiramos sua 4 pétalas e o que havia envolta do ovário e o tubo estaminal, e tivemos que remover essas 3 partes com muito cuidado para não romper a estilete e o ovário que seria a parte feminina da hibisco
+            </P>
+        </B>
 
 </section>
 </body>
