--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
     <B class="SEMANAS">SEMANA 2 </B>
     <p>   Na segunda semana dia vinte dois trocamos o solo da planta e lavamos a raiz, e realizamos o processo de estaquia na pimenta biquinho com um enraizador artificial que nós fizemos. Plantamos suculentas e aprendemos sobre propagação vegetativa também.
     </P>
-    
+    <center>
+        <img class="imagempimenta1" src="imagem11.jpeg" alt="">
+        <img class="imagempimenta1" src="imagem22.jpeg" alt="">
+        <img class="imagempimenta1" src="imagem33.jpeg" alt="">
+       </center>
 
     <B class="SEMANAS">SEMANA 3</B>
         <p>  Na terceira semana, fizemos a retirada dos pulgões novamente usando a mistura orgânica, após isso tínhamos algumas pimentas abrimos elas retiramos as sementes e plantamos em um novo recipiente depois disso mudamos a nossa pimenta biquinho e o bambu de local, aonde eles teriam mais contato ao sol.
