--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         <p>  Na terceira semana, fizemos a retirada dos pulgões novamente usando a mistura orgânica, após isso tínhamos algumas pimentas abrimos elas retiramos as sementes e plantamos em um novo recipiente depois disso mudamos a nossa pimenta biquinho e o bambu de local, aonde eles teriam mais contato ao sol.
             E depois pegamos uma flor chamada hibisco e retiramos sua 4 pétalas e o que havia envolta do ovário e o tubo estaminal, e tivemos que remover essas 3 partes com muito cuidado para não romper a estilete e o ovário que seria a parte feminina da hibisco
             </P>
+            <center>
+                <img class="imagempimenta1" src="imagem111.jpeg" alt="">
+               </center>
         
 
 </section>
