--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="cabeçalho">
         <ul>
             <li class="CABECALHOLISTA">
-    <a href="semana1.html">SEMANA 1</a>
+    <a href="semana1.html">ARTIGO CIENTIFICO</a>
             </li>
             <li class="CABECALHOLISTA">
                 <a href="semana2.html">SEMANA 2</a>
