--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <a href="semana1.html">ARTIGO CIENTIFICO</a>
             </li>
             <li class="CABECALHOLISTA">
-                <a href="semana2.html">SEMANA 2</a>
+                <a href="semana2.html">teste</a>
                         </li>
                         <li class="CABECALHOLISTA">
-                            <a href="semana3.html">SEMANA 3</a>
+                            <a href="semana3.html">teste</a>
                                     </li>
                    
     </ul>
