--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             <center>
                 <img class="imagempimenta1" src="imagem111.jpeg" alt="">
                </center>
+
+               <B class="SEMANAS">SEMANA 4</B>
+               <p>  Na quarta semana do dia cinco de junho, quando chegamos ao laboratório e regamos as plantas, observamos o crescimento enquanto tomamos cuidado com a hidratação, controlando a luminosidade, com muitas se recuperando mas sem crescimento notável.
+            </P>
+                   <center>
+                       <img class="imagempimenta1" src="imagem111.jpeg" alt="">
+                      </center>
         
 
 </section>
