--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     <img class="imagempimenta1" src="imagem2.jpeg" alt="">
     <img class="imagempimenta1" src="imagem3.jpeg" alt="">
    </center>
-    <B class="SEMANAS">SEMANA 2 </B>
+   </section>
+   <section class="semanacor">
+   <B class="SEMANAS">SEMANA 2 </B>
     <p>   Na segunda semana dia vinte dois trocamos o solo da planta e lavamos a raiz, e realizamos o processo de estaquia na pimenta biquinho com um enraizador artificial que nós fizemos. Plantamos suculentas e aprendemos sobre propagação vegetativa também.
     </P>
     <center>
@@ -81,7 +83,8 @@
         <img class="imagempimenta1" src="imagem22.jpeg" alt="">
         <img class="imagempimenta1" src="imagem33.jpeg" alt="">
        </center>
-
+    </section>
+    <section class="semanacor">
     <B class="SEMANAS">SEMANA 3</B>
         <p>  Na terceira semana, fizemos a retirada dos pulgões novamente usando a mistura orgânica, após isso tínhamos algumas pimentas abrimos elas retiramos as sementes e plantamos em um novo recipiente depois disso mudamos a nossa pimenta biquinho e o bambu de local, aonde eles teriam mais contato ao sol.
             E depois pegamos uma flor chamada hibisco e retiramos sua 4 pétalas e o que havia envolta do ovário e o tubo estaminal, e tivemos que remover essas 3 partes com muito cuidado para não romper a estilete e o ovário que seria a parte feminina da hibisco
@@ -89,7 +92,8 @@
             <center>
                 <img class="imagempimenta1" src="imagem111.jpeg" alt="">
                </center>
-
+            </section>
+            <section class="semanacor">
                <B class="SEMANAS">SEMANA 4</B>
                <p>  Na quarta semana do dia cinco de junho, quando chegamos ao laboratório e regamos as plantas, observamos o crescimento enquanto tomamos cuidado com a hidratação, controlando a luminosidade, com muitas se recuperando mas sem crescimento notável.
             </P>
@@ -98,6 +102,19 @@
                        <img class="imagempimenta1" src="imagem2222.jpeg" alt="">
                       </center>
         
+
+</section>
+<section class="semanacor">
+    <B class="SEMANAS">SEMANA 5</B>
+    <p>
+        Na quinta semana do dia doze de junho, fomos ao laboratório, chegando lá irrigamos a pimenta biquinho o bambu  e as suculentas, após isso plantamos dois alhos um alho na terra outra alho na água e um bubo na terra, descobrimos que nao sao dentes de alhos são bubo, mais conhecido como dente de alho.
+
+    </p> 
+        <center>
+            <img class="imagempimenta1" src="imagem1111.jpeg" alt="">
+            <img class="imagempimenta1" src="imagem2222.jpeg" alt="">
+           </center>
+
 
 </section>
 </body>
