--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
     </p> 
         <center>
-            <img class="imagempimenta1" src="imagem1111.jpeg" alt="">
-            <img class="imagempimenta1" src="imagem2222.jpeg" alt="">
+            <img class="imagempimenta1" src="IMG-20230524-WA0002.jpg" alt="">
+            <img class="imagempimenta1" src="IMG-20230626-WA0075 (1).jpg" alt="">
            </center>
 
 
