--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Sobre o trabalho:
         </b>
         <p>Olá, este trabalho é feito com intuito de observar o crecimento por meio de estaquia</p>
-        <P>Meu grupo criou esse site com o objetivo de passar informaçoẽs sobre a planta biquinho</P>
+        <P>Meu grupo criou esse site com o objetivo de passar informaçoẽs sobre a planta biquinho cujo o nome que nos a batizamos de <b>GEFFERSON</b></P>
     </section>
 
     
