--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <li class="CABECALHOLISTA">
     <a href="semana1.html">ARTIGO CIENTIFICO</a>
             </li>
-            
+            <li class="CABECALHOLISTA">
+                <a href="semana2.html">teste</a>
+                        </li>
+                        <li class="CABECALHOLISTA">
+                            <a href="semana3.html">teste</a>
+                                    </li>
                    
     </ul>
         <h1 class="cabeçalho_titulo">PIMENTA-BIQUINHO</h1>
