--- a/semana2.html
+++ b/semana2.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <section class="ARTIGO">
-    <h1>ARTIGO CIENTIFICO</h1>
+   <section>
+     <h1>ARTIGO CIENTIFICO</h1>
     <p>A pimenta biquinho é uma variedade brasileira da família das Capsicum chinese, e seu teor de ardência na Escala de Scoville, usada para mostrar quais são as pimentas mais picantes, é zero. Até por isso ela é uma pimenta super bem aceita, afinal é aromática, não é ardente e ajuda a temperar e dar frescor aos pratos.
 
         Tradicional em várias regiões do país, principalmente no Sudeste, a pimenta biquinho também é conhecida como pimenta de bico e pimenta-de-cheiro. A pimenteira pode alcançar até um metro de altura e seus frutos têm, em média, 3 centímetros de comprimento e 1,5 centímetro de largura.
@@ -21,8 +22,10 @@
         
         </p>
     </section>
+    </section>
 
         <section class="ARTIGO">
+            <section>
             <h1>PLANTIO</h1>
             <p>
                 Para o plantio em locais abertos, o ideal é um espaçamento de 0,8 metro a 1 metro entre as linhas, e de 0,5 metro a 0,6 metro entre as plantas. Para cultivo em estufas e outros ambientes protegidos, é importante manter duas linhas de plantio com espaçamento de 0,6 metro entre linhas e 0,5 metro entre plantas.
@@ -31,15 +34,18 @@
                 
                 Outra dica importante é preferir lugares com pleno sol, mas, caso isso não seja possível, a planta pode ser cultivada a meia sombra. É preciso ficar atento ao surgimento de pragas relacionadas à umidade, como os ácaros. 
                 </p>
+            </section>
 </section>
 
 <section class="ARTIGO">
+   <section>
     <h1>COLHEITA</h1>
     <p>
         Se tudo ocorrer bem com o cultivo, a pimenta biquinho começa a frutificar entre 3 meses a 4 meses depois do plantio. As pimenteiras fornecem colheitas múltiplas, mas após cada colheita é importante fazer uma nova adubação com matéria orgânica, como húmus ou esterco bovino.
 
         Em questão de clima, a temperatura ideal para a pimenta biquinho é entre 18ºC a 35ºC. Nesses locais o plantio indicado é entre os meses de agosto a fevereiro. A planta também pode se desenvolver em regiões mais frias, mas demora mais para frutificar.         
         </p>
+    </section>
 </section>
 </body>
 </html>
