--- a/semana2.html
+++ b/semana2.html
@@ -10,7 +10,7 @@
     <section class="ARTIGO">
    <section>
      <h1>ARTIGO CIENTIFICO</h1>
-    <p>A pimenta biquinho é uma variedade brasileira da família das Capsicum chinese, e seu teor de ardência na Escala de Scoville, usada para mostrar quais são as pimentas mais picantes, é zero. Até por isso ela é uma pimenta super bem aceita, afinal é aromática, não é ardente e ajuda a temperar e dar frescor aos pratos.
+    <p class="pala">A pimenta biquinho é uma variedade brasileira da família das Capsicum chinese, e seu teor de ardência na Escala de Scoville, usada para mostrar quais são as pimentas mais picantes, é zero. Até por isso ela é uma pimenta super bem aceita, afinal é aromática, não é ardente e ajuda a temperar e dar frescor aos pratos.
 
         Tradicional em várias regiões do país, principalmente no Sudeste, a pimenta biquinho também é conhecida como pimenta de bico e pimenta-de-cheiro. A pimenteira pode alcançar até um metro de altura e seus frutos têm, em média, 3 centímetros de comprimento e 1,5 centímetro de largura.
         
@@ -27,7 +27,7 @@
         <section class="ARTIGO">
             <section>
             <h1>PLANTIO</h1>
-            <p>
+            <p class="pala">
                 Para o plantio em locais abertos, o ideal é um espaçamento de 0,8 metro a 1 metro entre as linhas, e de 0,5 metro a 0,6 metro entre as plantas. Para cultivo em estufas e outros ambientes protegidos, é importante manter duas linhas de plantio com espaçamento de 0,6 metro entre linhas e 0,5 metro entre plantas.
 
                 O plantio também pode ser realizado em jardins ou em vasos e, nesses casos, o ideal são vasos de pelo menos 5 litros, pois quanto maior o vaso, maior será o desenvolvimento e a frutificação. Já a pimenta biquinho plantada em canteiros, pode ultrapassar 1 metro de altura.
@@ -40,7 +40,7 @@
 <section class="ARTIGO">
    <section>
     <h1>COLHEITA</h1>
-    <p>
+    <p class="pala">
         Se tudo ocorrer bem com o cultivo, a pimenta biquinho começa a frutificar entre 3 meses a 4 meses depois do plantio. As pimenteiras fornecem colheitas múltiplas, mas após cada colheita é importante fazer uma nova adubação com matéria orgânica, como húmus ou esterco bovino.
 
         Em questão de clima, a temperatura ideal para a pimenta biquinho é entre 18ºC a 35ºC. Nesses locais o plantio indicado é entre os meses de agosto a fevereiro. A planta também pode se desenvolver em regiões mais frias, mas demora mais para frutificar.         
